--- a/source/scss/blocks/intro.scss
+++ b/source/scss/blocks/intro.scss
@@ -117,15 +117,11 @@
     margin: 0;
     opacity: 0;
     transform: translateY(23px);
-    animation: fadeInGuess .6s ease .1s forwards;
+    transition: all .5s ease;
   }
 
-  @keyframes fadeInGuess {
-    0% {
-      opacity: 0;
-      transform: translateY(23px);
-    }
-    100% {
+  .active & {
+    p {
       opacity: 1;
       transform: translateY(0);
     }
